--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -7,9 +7,14 @@ main:
   - name: Home
     url: '#about'
     weight: 10
-  - name: Posts
-    url: '#posts'
+    
+   - name: Experience
+    url: '#Experience'
     weight: 20
+    
+ # - name: Posts
+ #   url: '#posts'
+#    weight: 20
   - name: Projects
     url: '#projects'
     weight: 30
