--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -8,13 +8,13 @@ main:
     url: '#about'
     weight: 10
     
-   - name: Experience
-    url: '#Experience'
+  - name: Experience
+    url: '#experience'
     weight: 20
     
- # - name: Posts
- #   url: '#posts'
-#    weight: 20
+# - name: Posts
+#   url: '#posts'
+#   weight: 20
   - name: Projects
     url: '#projects'
     weight: 30
