--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -8,9 +8,9 @@ main:
     url: '#about'
     weight: 10
     
-  - name: Experience
-    url: '#experience'
-    weight: 20
+# - name: Experience
+#   url: '#experience'
+#   weight: 20
     
 # - name: Posts
 #   url: '#posts'
