--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -11,7 +11,11 @@ main:
 # - name: Experience
 #   url: '#experience'
 #   weight: 20
-    
+
+  - name: Skills
+    url: '#skills'
+    weight: 20
+
 # - name: Posts
 #   url: '#posts'
 #   weight: 20
