--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -25,9 +25,9 @@ main:
   #- name: Talks
    # url: '#talks'
    # weight: 40
-  - name: Publications
-    url: '#featured'
-    weight: 50
+#  - name: Publications
+#    url: '#featured'
+#    weight: 50
   - name: Courses
     url: courses/
     weight: 60
