Navi Changes acc

--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -15,6 +15,10 @@ main:
   - name: Skills
     url: '#skills'
     weight: 20
+    
+  - name: Accomplishments
+    url: '#accomplishments'
+    weight: 20
 
 # - name: Posts
 #   url: '#posts'
