--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -7,32 +7,33 @@ main:
   - name: Home
     url: '#about'
     weight: 10
-  - name: Skill
+  - name: Skills
     url: '#skills'
     weight: 20   
-# - name: Experience
-#   url: '#experience'
-#   weight: 20
-
   - name: Accomplishments
     url: '#accomplishments'
     weight: 20
-
-# - name: Posts
-#   url: '#posts'
-#   weight: 20
   - name: Projects
     url: '#projects'
     weight: 30
-  #- name: Talks
-   # url: '#talks'
-   # weight: 40
-#  - name: Publications
-#    url: '#featured'
-#    weight: 50
   - name: Courses
     url: courses/
     weight: 60
   - name: Contact
     url: '#contact'
     weight: 70
+
+# - name: Experience
+#   url: '#experience'
+#   weight: 20
+
+# - name: Posts
+#   url: '#posts'
+#   weight: 20
+
+  #- name: Talks
+   # url: '#talks'
+   # weight: 40
+#  - name: Publications
+#    url: '#featured'
+#    weight: 50
