--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -13,9 +13,9 @@ main:
   - name: Projects
     url: '#projects'
     weight: 30
-#    - name: Posts
-#    url: '#posts'
-#    weight: 50
+    - name: Posts
+    url: '#posts'
+    weight: 40
   - name: Courses
     url: courses/
     weight: 60
