--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -11,7 +11,7 @@ main:
     url: '#skills'
     weight: 20 
   - name: Posts
-    url: '#Posts'
+    url: '#posts'
     weight: 30
   - name: Projects
     url: '#projects'
